# mangashu

./: .env  .eslintrc.js  .gitignore  CMakeLists.txt  README.md  index.html  main.cc  next.config.mjs  package-lock.json  package.json  s.sh  shell.nix  tailwind.config.js  tmp.cc  tsconfig.json
components/: Map.tsx
includes/: common.h  mangashu.h  utils.h
pages/: ChangeView.js  Header.js  MapsNoSSR.js  index.js  index.tsx
public/: index.html
src/: App.tsx  App.vue  main.cc
src/api/: data.ts
src/components/: DataComponet.vue  Globe.vue  Header.tsx  MapsNoSSR.tsx  SearchInput.vue
src/styles/: App.css  index.css
src/views/: Home.vue
styles/: Home.module.css  globals.css
